--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,35 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/product
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/product
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.show-sql=true
+
+spring.application.name=product-service
+server.port=9095
+#eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+
+###################################
+#           vault setup           #
+###################################
+
+
+spring.cloud.vault.host=localhost
+spring.cloud.vault.port=8200
+spring.cloud.vault.scheme=http
+spring.cloud.vault.authentication=TOKEN
+spring.cloud.vault.token=hvs.0Ws66RHof399Rd0RJTHxIUvd
+spring.cloud.vault.application-name=product-service
+spring.cloud.vault.kv.enabled=true
+
+###################################
+#  import vault and config server #
+###################################
+
+spring.config.import=configserver:http://localhost:8888 , vault://
+spring.cloud.config.enabled= true
+
+
+management.endpoints.web.exposure.include= *
